# Score-Matching

./: .gitignore  README.md  download_data.py  evaluate.py  model.py  model_clf.py  model_clf_explanation.ipynb  pyproject.toml  requirements.txt  sample.py  train.py  train_cfl.py  train_clf.py
outputs/: clasificador.pt  metricas_CFG.csv  metricas_condicional.csv
src/: download_data.py  evaluate.py  model.py  model_clf.py  train.py  train_cfl.py
